--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "stripe": "^12.18.0"
   },
   "devDependencies": {
     "eslint": "^8.38.0"
