--- a/api/package.json
+++ b/api/package.json
@@ -1,12 +1,28 @@
 {
+  "name": "pizzahut",
+  "version": "1.0.0",
+  "description": "Pizza Hut project for Software Engineering course",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "author": "Nguyen Hai Nam",
+  "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.3.1",
-    "nodemon": "^2.0.22"
+    "mongoose": "^7.0.3",
+    "morgan": "^1.10.0",
+    "stripe": "^12.18.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.38.0"
   }
 }
