--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon --ignore 'swagger-output.json' server.js"
   },
   "author": "Nguyen Hai Nam",
   "license": "ISC",
@@ -17,9 +17,12 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
-    "stripe": "^12.18.0"
+    "stripe": "^12.18.0",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.38.0"
+    "eslint": "^8.38.0",
+    "nodemon": "^3.0.1",
+    "swagger-autogen": "^2.23.5"
   }
 }
