--- a/api/package.json
+++ b/api/package.json
@@ -11,16 +11,15 @@
   "author": "Nguyen Hai Nam",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "cookies": "^0.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
-    "morgan": "^1.10.0",
-    "stripe": "^12.18.0"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^8.38.0"
