--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.0",
+    "@mui/material": "^5.14.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.14.1",
     "tailwindcss": "^3.3.2",
     "tw-elements": "^1.0.0-beta2"
