--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
+    "bootstrap-table": "^1.22.1",
+    "jquery": "^3.7.0",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
